Fixed the pagination problem and added different titles

--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
   </nav>
 
   <div class="container-fluid wishlist-container">
-    <div class="fs-2">MY WISHLIST</div>
-    <div class="text-dark fw-bold"><a href="#" class="text-dark text-decoration-none">HOME</a> <i
-        class="fas fa-angle-right px-1"></i>MY WISHLIST</div>
+    <div class="fs-2 fw-bold">MY WISHLIST</div>
+    <div class="text-dark fw-bold">
+      <a href="#" class="text-dark text-decoration-none">HOME</a>
+      <i class="fas fa-angle-right px-1"></i>MY WISHLIST
+    </div>
   </div>
 
   <div class="container-fluid clear-button">
@@ -92,7 +94,7 @@
   <hr class="after-pagination-hr">
 
   <div class="slider position-relative">
-    <div class="tiny-border-right position-absolute "></div>
+    <div class="tiny-border-right position-absolute"></div>
     <div class="tiny-border-left position-absolute"></div>
     <div class="slider__wrapper">
 
@@ -143,7 +145,7 @@
   </div>
   </div>
 
-  <form class="form my-5 border-top border-3">
+  <form class="form my-5 border-top border-3 text-secondary">
     <div class="form-group  mb-2">
       <div class="subscribe-text fw-bold">
         <p>SUBSCRIBE TO THE LATEST SMARTPHONES <br> NEWS & GREAT DEALS WE OFFER</p>
@@ -153,7 +155,7 @@
         <div class="input-wrapper position-relative">
           <input type="email" class="form-control" id="emailSubscribeInput" placeholder="ENTER YOUR EMAIL ADDRES">
           <buton type="submit" class="subscribeButton position-absolute"><i class="far fa-envelope"></i></buton>
-          <div id="error" class="text-danger my-2 mx-1"></div>
+          <div class="text-danger my-2 mx-1 error"></div>
         </div>
       </div>
 
@@ -205,7 +207,7 @@
 
   <script src="./script/script.js"></script>
   <script src="./script/slider.js"></script>
-  <script src="./script/script.js"></script>
+  <script src="./script/subscribeEmailCheck.js"></script>
 </body>
 
 </html>
