Fixed the pagination problem

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ul>
 
         <div class="shopping-cart-container border border-2 border-dark position-relative">
-          <i class="fas fa-shopping-bag text-danger"></i>
+          <i class="fas fa-shopping-bag text-danger me-1"></i>
           <span>$460.00</span>
           <div class="products-amount position-absolute text-white">2</div>
         </div>
